section collapse bugs fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@ body {
 /* favorite food section start */
 .food-section {
   width: 80%;
-  height: 672px;
+  height: auto;
   margin: 0 auto;
   margin-top: 100px;
 }
@@ -100,6 +100,7 @@ body {
 .food__content {
   width: 60%;
   height: 173px;
+  height: auto;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -129,6 +130,7 @@ body {
   width: 805px;
   height: 402px;
   width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   margin: 0 auto;
@@ -138,8 +140,7 @@ body {
 
 .food__item {
   position: relative;
-  width: 424px;
-  height: 283px;
+  width: 100%;
   height: auto;
 }
 
@@ -150,8 +151,8 @@ body {
 
 .buy-btn {
   padding: 8.5px 19.5px;
+  margin: 0 auto;
   margin-top: 15px;
-  margin-left: 26%;
   border-radius: 8px;
   border: none;
   background: rgba(82, 195, 3, 0.15);
@@ -161,6 +162,9 @@ body {
   line-height: 28px;
   text-align: center;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .food__item-title {
@@ -215,6 +219,7 @@ body {
 .good-section {
   width: 100%;
   height: 671px;
+  height: auto;
   margin-top: 100px;
   display: flex;
   justify-content: center;
@@ -222,9 +227,8 @@ body {
 }
 
 .good__image {
-  width: 586px;
   width: 50%;
-  height: 517px;
+  height: auto;
 }
 
 .good__image img {
@@ -304,7 +308,7 @@ body {
 .card-section {
   width: 30%;
   margin: 0 auto;
-  margin-top: 0px;
+  margin-top: 80px;
 }
 
 .card__image {
@@ -319,7 +323,6 @@ body {
 
 .card-btn {
   margin-top: 15px;
-  margin-left: 30%;
 }
 
 .card__title {
@@ -343,8 +346,12 @@ body {
 }
 
 .watch-btn {
-  margin-left: 10%;
   cursor: pointer;
+  margin: 0 auto;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* card section end */
 
